xm-nginx-istio/ingress_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ucloud-gateway
  namespace: test-istio-universal

spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - edge.sf.ucloud.cn
    port:
      name: http
      number: 80
      protocol: HTTP
